--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,63 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  margin: 0;
+  padding: 0;
+  background-size: cover;
+  background-position: center;
+  font-family: sans-serif;
+}
+
+.container {
+  width: 320px;
+  height: 420px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
+h1{
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 22px;
+}
+
+.container p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.container input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.container input[type ="text"], input[type ="password"]{
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  color: #fff;
+  font-size: 16px;
+} 
+
+.container button{
+  width: 100%;
+  margin-bottom: 20px;
+  border: none;
+  outline: none;
+  height: 40px;
+  font-size: 18px;
+  border-radius: 20px;
+}
+
