--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,19 @@ body{
   font-family: sans-serif;
 }
 
+.container2 {
+  width: 700px;
+  height: 700px;
+  background: #61dafb;
+  color: #000;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
 .container {
   width: 320px;
   height: 420px;
@@ -71,12 +84,23 @@ h1{
   font-weight: bold;
 }
 
+.container2 p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.container2 input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .container input{
   width: 100%;
   margin-bottom: 20px;
 }
 
-.container input[type ="text"], input[type ="password"]{
+/*.container input[type ="text"], input[type ="password"]{
   border: none;
   border-bottom: 1px solid #fff;
   background: transparent;
@@ -84,7 +108,18 @@ h1{
   height: 40px;
   color: #fff;
   font-size: 16px;
-} 
+}*/
+
+.container2 button{
+  width: 25%;
+  margin-bottom: 20px;
+  border: none;
+  outline: none;
+  height: 20px;
+  font-size: 18px;
+  border-radius: 20px;
+}
+
 
 .container button{
   width: 100%;
